test/patterns/s0134_gas_station/hafis/starchat/jml_syntax_checking.txt
./test/s0134_gas_station/hafis/starchat/Solution.java:11: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < cost.length; ((cost <= 10000) && (cost >= 0)));
                                                         ^
  first type:  int[]
  second type: int
./test/s0134_gas_station/hafis/starchat/Solution.java:11: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < cost.length; ((cost <= 10000) && (cost >= 0)));
                                                                            ^
  first type:  int[]
  second type: int
./test/s0134_gas_station/hafis/starchat/Solution.java:12: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < gas.length; ((gas <= 10000) && (gas >= 0)));
                                                       ^
  first type:  int[]
  second type: int
./test/s0134_gas_station/hafis/starchat/Solution.java:12: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < gas.length; ((gas <= 10000) && (gas >= 0)));
                                                                         ^
  first type:  int[]
  second type: int
4 errors
